--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,15 +5,24 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.10.1",
+    "autoprefixer": "^10.3.4",
+    "i18next": "^20.6.1",
     "next": "11.1.2",
+    "postcss": "^8.3.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-i18next": "^11.12.0",
+    "tailwindcss": "^2.2.15"
   },
   "devDependencies": {
     "@types/react": "17.0.20",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2",
     "typescript": "4.4.2"
   }
 }
