--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@popperjs/core": "^2.10.1",
     "autoprefixer": "^10.3.4",
+    "formik": "^2.2.9",
     "i18next": "^20.6.1",
     "next": "11.1.2",
     "postcss": "^8.3.6",
