--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@popperjs/core": "^2.10.1",
     "autoprefixer": "^10.3.4",
+    "axios": "^0.21.4",
+    "dotenv": "^10.0.0",
     "formik": "^2.2.9",
     "i18next": "^20.6.1",
     "next": "11.1.2",
@@ -25,5 +27,6 @@
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "typescript": "4.4.2"
-  }
+  },
+  "proxy": "http://document-manager-app.herokuapp.com"
 }
