--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.10.1",
+    "@types/react-table": "^7.7.6",
     "autoprefixer": "^10.3.4",
     "axios": "^0.21.4",
     "dotenv": "^10.0.0",
