--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "axios": "^0.23.0",
     "dotenv": "^10.0.0",
     "formik": "^2.2.9",
+    "js-cookie": "^3.0.1",
     "next": "11.1.2",
     "postcss": "^8.3.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-pdf": "^5.4.1",
     "react-table": "^7.7.0",
     "tailwindcss": "^2.2.17"
   },
