--- a/DocumentManager/src/main/resources/application.properties
+++ b/DocumentManager/src/main/resources/application.properties
@@ -3,22 +3,22 @@
 
 server.port=9000
 #==================MYSQL================================================================================================
-spring.datasource.url=jdbc:mysql://localhost:3306/document_manager
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/document_manager
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.hibernate.ddl-auto=update
 
 
 #===========================POSTGRES====================================================================================
-#spring.datasource.url=${SPRING_DATASOURCE_URL}
-#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-#spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER-CLASS-NAME}
-#spring.jpa.properties.hibernate.dialect=${SPRING_JPA_DATABASE-PLATFORM}
-#spring.jpa.database-platform=${SPRING_JPA_DATABASE-PLATFORM}
-#spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL-AUTO}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER-CLASS-NAME}
+spring.jpa.properties.hibernate.dialect=${SPRING_JPA_DATABASE-PLATFORM}
+spring.jpa.database-platform=${SPRING_JPA_DATABASE-PLATFORM}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL-AUTO}
 
 
 spring.datasource.hikari.validationTimeout= 3000000
