--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,9 @@
     "react-dom": "17.0.2",
     "react-pdf": "^5.4.1",
     "react-table": "^7.7.0",
-    "tailwindcss": "^2.2.17"
+    "tailwindcss": "^2.2.17",
+    "toastr": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.0.1",
