--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.1",
     "next": "11.1.2",
     "postcss": "^8.3.9",
     "react": "17.0.2",
