--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^3.0.1",
     "moment": "^2.29.1",
     "next": "11.1.2",
+    "pdf-lib": "^1.17.1",
     "postcss": "^8.3.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
