--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "postcss": "^8.3.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-file-viewer": "^1.2.1",
     "react-pdf": "^5.4.1",
     "react-table": "^7.7.0",
     "tailwindcss": "^2.2.17",
